# multimodal_ml_service

./: .gitignore  LICENSE  README.md  conda.yaml  noxfile.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.py
assets/: cloud_architecture.excalidraw  ddd_ml.excalidraw  multimodel_complete.excalidraw  package_structure.excalidraw  run_excalidraw.md
data/: README.md
notebooks/: try_api.ipynb
scripts/: start_image_api.sh  start_mlflow_tracker.sh
src/: core.py
src/adapters/: annotations.py  data_repo.py  logger.py  serialization.py  storage.py  tracker.py
src/config/: blur_dataset_kaggle.yaml  blur_estimator_laplacian.yaml  config.py
src/domain/image/: blur.py
src/domain/shared/: data.py  estimators.py  evaluation.py  image_utils.py  pipelines.py  training.py
src/entrypoints/: api.py
src/service/: dataset_service.py  image_inference_service.py  image_training_service.py
tests/: conftest.py
tests/config/: blur_dataset_kaggle.yaml  blur_estimator_gradients.yaml
tests/domain/shared/: test_data.py  test_estimators.py  test_evaluation.py  test_image_utils.py
